--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,16 +8,22 @@
       <th>Name</th>
       <th>Description</th>
       <th>Price</th>
+      <th>Catigory</th>
+      <th>Color</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @products.each do |product| %>
+      <% color = Color.find_by id: product.color_id %>
+      <% catigory = Catigory.find_by id: product.catigory_id %>
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.price %></td>
+        <td><%= catigory.name %></td>
+        <td><%= color.name %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
